Bug squashing. Fixed Always On Top. Fixed Context Menus. Added 'Map:' to the map window title.

--- a/src/DPSMeter.xaml
+++ b/src/DPSMeter.xaml
@@ -36,7 +36,7 @@
                         <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="openmobinfo" ToolTip="Open Mob Info Window">
                             <Image Source="pack://application:,,,/toolbox.png"/>
                         </Button>
-                        <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" ToolTip="Open a Timer Window" Click="Map_TimerMenu_Open">
+                        <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" ToolTip="Open a Timer Window" Click="Dps_TimerMenu_OpenedEvent">
                             <Image Source="pack://application:,,,/combo.png"/>
                             <Button.ContextMenu>
                                 <ContextMenu StaysOpen="True" x:Name="TimerWindowsMenu" />
