--- a/src/App.xaml
+++ b/src/App.xaml
@@ -64,7 +64,11 @@
         </Style>
         <Style x:Key="MyMobWindowSyle" TargetType="{x:Type Window}">
             <Setter Property="FontSize"  Value="{DynamicResource GlobalFontSize}" />
-            <Setter Property="Background" Value="#1a1919" />
+            <Setter Property="Background">
+                <Setter.Value>
+                    <SolidColorBrush Color="#1a1919" Opacity="1.0" />
+                </Setter.Value>
+            </Setter>
         </Style>
         <Style x:Key="MyMobTextBoxWindowSyle" TargetType="{x:Type TextBlock}">
             <Setter Property="FontSize"  Value="{DynamicResource GlobalFontSize}" />
