--- a/src/MobInfo.xaml
+++ b/src/MobInfo.xaml
@@ -32,7 +32,7 @@
                 <Grid>
                     <TextBlock Foreground="White" FontWeight="Bold" VerticalAlignment="Center" Margin="10,1,10,1" Text="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}, Path=Title}"/>
                     <StackPanel Orientation="Horizontal"  HorizontalAlignment="Center">
-                        <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" ToolTip="Open a Timer Window" Click="MobInfo_TimerMenu_OpenedEvent">
+                        <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" ToolTip="Open a Timer Window" Name="TimerMenuBtn" Click="MobInfo_TimerMenu_OpenedEvent">
                             <Image Source="pack://application:,,,/combo.png"/>
                             <Button.ContextMenu>
                                 <ContextMenu StaysOpen="True" x:Name="TimerWindowsMenu" />
